--- a/templates/index.html
+++ b/templates/index.html
@@ -5,94 +5,100 @@
         <link rel="stylesheet" href="../styles/style.css">
         <title></title>
     </head>
-    <body>
-        <div class="Body">
-        <header id="header">
-            <span id="SitesName">minimø</span>
-            <nav id="Navigation">
-                <div class="Clause">lifestyle</div>
-                <div class="Clause">photodiary</div>
-                <div class="Clause">music</div>
-                <div class="Clause">travel</div>
+    <body class="Body">
+        <header class="Header">
+            <a href="index.html"><img src="../images/logo.png" alt="Логотип" class="Нeader__Logo"/></a>
+            <nav class="Nav">
+                <ul class="Nav__List">
+                    <li class="Nav__List_Item"><a href="" class="Nav__List_Link">lifestyle</a></li>
+                    <li class="Nav__List_Item"><a href="" class="Nav__List_Link">photodiary</a></li>
+                    <li class="Nav__List_Item"><a href="" class="Nav__List_Link">music</a></li>
+                    <li class="Nav__List_Item"><a href="" class="Nav__List_Link">travel</a></li>
+                </ul>
             </nav>
         </header>
-        <main id="main">
-            <div class="MainPifctere"><img src="../images/sun.png" alt="Тут должна быть картинка"/></div>
-            <div id="Table">
-            <section id="MainText">
-                <span class="Link">photodiary</span>
-                <article>
-                    <div>
-                        <h1 class="header">The perfect weekend getaway</h1>
-                        <p class="Text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.<b>Sed ut perspiciatis, unde omnis iste natus error sit voluptatem accusantium doloremque laudantium</b>, totam rem aperiam eaque ipsa, quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt, explicabo. Nemo enim ipsam voluptatem, quia voluptas sit, aspernatur aut odit aut fugit, sed quia consequuntur magni dolores eos, qui ratione voluptatem sequi nesciunt, neque porro quisquam est, qui dolorem ipsum, quia dolor sit, amet, consectetur, adipisci velit, sed quia non numquam eius modi tempora incidunt, ut labore et dolore magnam aliquam quaerat voluptatem.
+        <main class="Main">
+            <figure class="Gallery">
+                <img src="../images/sun.png" alt="Тут должна быть картинка" class="Gallery__Img"/>
+            </figure>
+            <section class="Section">
+                <a class="Link">photodiary</a>
+                <article class="Article">
+                        <h1 class="Article__Header">The perfect weekend getaway</h1>
+                        <p class="Article__Text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.<span class="Article__Text_Strong">Sed ut perspiciatis, unde omnis iste natus error sit voluptatem accusantium doloremque laudantium,</span> totam rem aperiam eaque ipsa, quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt, explicabo. Nemo enim ipsam voluptatem, quia voluptas sit, aspernatur aut odit aut fugit, sed quia consequuntur magni dolores eos, qui ratione voluptatem sequi nesciunt, neque porro quisquam est, qui dolorem ipsum, quia dolor sit, amet, consectetur, adipisci velit, sed quia non numquam eius modi tempora incidunt, ut labore et dolore magnam aliquam quaerat voluptatem.
                         </p>
-                    </div>
-                    <div><img src="../images/angle.png" alt="Тут должна быть картинка!)"/></div>
-                    <div><img src="../images/alone.png" alt="Тут должна быть картинка!)"/></div>
-                    <div><img src="../images/sunny.png" alt="Тут должна быть картинка!)"/></div>
-                    <div>
-                        <p class="Text"><i>"Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.Sed ut perspiciatis, unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam eaque ipsa, quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt, explicabo."</i></p>
-                        <p class="Text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.<b> Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</b>Sed ut perspiciatis, unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam eaque ipsa, quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt, explicabo. Nemo enim ipsam voluptatem, quia voluptas sit, aspernatur aut odit aut fugit, sed quia consequuntur magni dolores eos, qui ratione voluptatem sequi nesciunt, neque porro quisquam est, qui dolorem ipsum, quia dolor sit, amet, consectetur, adipisci velit, sed quia non numquam eius modi tempora incidunt, ut labore et dolore magnam aliquam quaerat voluptatem.
+                        <figure class="Gallery">
+                            <img src="../images/angle.png" alt="Тут должна быть картинка!)" class="Gallery__Img"/>
+                            <img src="../images/alone.png" alt="Тут должна быть картинка!)" class="Gallery__Img"/>
+                            <img src="../images/sunny.png" alt="Тут должна быть картинка!)" class="Gallery__Img"/>
+                            <figcaption class="Gallery__Signature">
+                                "Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.Sed ut perspiciatis, unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam eaque ipsa, quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt, explicabo."
+                            </figcaption>
+                        </figure>
+                        <p class="Article__Text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.<b> Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</b>Sed ut perspiciatis, unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam eaque ipsa, quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt, explicabo. Nemo enim ipsam voluptatem, quia voluptas sit, aspernatur aut odit aut fugit, sed quia consequuntur magni dolores eos, qui ratione voluptatem sequi nesciunt, neque porro quisquam est, qui dolorem ipsum, quia dolor sit, amet, consectetur, adipisci velit, sed quia non numquam eius modi tempora incidunt, ut labore et dolore magnam aliquam quaerat voluptatem.
                         </p>
-                    </div>
                 </article>
+                <div class="ArticleFooter">
+                <span class="ArticleFooter__Text">Share</span>
+                <figure class="ImgsLink">
+                    <a href="facebook.com"><img src="../images/fb.png" alt="Fb" class="ImgsLink__ImgLink"/></a>
+                    <a href="twitter.com"><img src="../images/tw.png" alt="Tw" class="ImgsLink__ImgLink"/></a>
+                    <a href="" ><img src="../images/g+.png" alt="g+" class="ImgsLink__ImgLink"/></a>
+                    <a href=""><img src="../images/tumblr.png" alt="Tmblr" class="ImgsLink__ImgLink"/></a>
+                    <a href=""><img src="../images/pinterest.png" alt="P" class="ImgsLink__ImgLink"/></a>
+                </figure>
+            </div>
             </section>
-            <aside id="Notes">
-                <div><img src="../images/mug.png" alt="Тут должна быть картинка!)"/></div>
-                <div>
-                    <div>
-                        <h2 id="HeaderNotes">About me</h2>
-                        <p class="Text">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris </p>
-                        <div>
-                            <img src="../images/fb.png" alt="Тут должна быть картинка!)"/>
-                            <img src="../images/inst.png" alt="Тут должна быть картинка!)"/>
-                            <img src="../images/pinterest.png" alt="Тут должна быть картинка!)"/></div>
-                    </div>
-                    <div>
-                        <h2 class="HeaderNotes">Top posts</h2>
-                        <ul>
+            <aside class="Aside">
+                <figure class="Gallery">
+                    <img src="../images/mug.png" alt="Тут должна быть картинка!)" class="Gallery__Img"/>
+                </figure>
+                <article class="Article">
+                <h1 class="Article__Header">About me</h1>
+                <p class="Article__Text">
+                    Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris 
+                </p>
+                </article>
+                <figure class="ImgsLink">
+                    <a><img src="../images/fb.png" alt="fb" class="ImgsLink__ImgLink"/></a>
+                    <a><img src="../images/inst.png" alt="inst" class="ImgsLink__ImgLink"/></a>
+                    <a><img src="../images/pinterest.png" alt="pntrst" class="ImgsLink__ImgLink"/></a>
+                </figure>
+                    <article class="Article">
+                        <a class="Link Article__Header">Top posts</a>
+                        <ul class="Article__List">
                             <li>
-                                <p class="TextNotes">A day exploring the Alps</p>
-                                <p class="Link">24 comments</p>
+                                <p class="Article__Text">A day exploring the Alps</p>
+                                <a class="Link">24 comments</a>
                             </li>
-                            <li><p class="TextNotes">American dream</p>
-                                <p class="Link">19 comments</p>
+                            <li>
+                                <p class="Article__Text">American dream</p>
+                                <a class="Link">19 comments</a>
                             </li>
-                            <li><p class="TextNotes">Cold winter days</p>
-                                <p class="Link">15 comments</p>
+                            <li>
+                                <p class="Article__Text">Cold winter days</p>
+                                <a class="Link">15 comments</a>
                             </li>
                         </ul>
-                    </div>
-                </div>
-                <div id="Bann" align="center">
-                    <p id="Size">250x250</p>
-                    <splan id="Banner">banner spot</splan>
+                    </article>
+                <div class="Banner">
+                    <span class="Banner__Header">250x250</span>
+                    <span class="Banner__Text">banner spot</span>
                 </div>
             </aside>
-            </div>
-            <div class="SocNet">
-                <div class="ClauseTwo" align="center">
-                    <span class="Link">Share  </span>
-                    <div class="ImgBlocks"><img src="../images/fb.png" alt="Тут должна быть картинка!)"/></div>
-                    <div class="ImgBlocks"><img src="../images/tw.png" alt="Тут должна быть картинка!)"/></div>
-                    <div class="ImgBlocks"><img src="../images/g+.png" alt="Тут должна быть картинка!)"/></div>
-                    <div class="ImgBlocks"><img src="../images/tumblr.png" alt="Тут должна быть картинка!)"/></div>
-                    <div class="ImgBlocks"><img src="../images/pinterest.png" alt="Тут должна быть картинка!)"/></div>
-                </div>
-            </div>
         </main>
-        <footer id="footer">
-            <div class="FooterDev">
-                <div class="FooterDev">Terms and conditions</div>
-                <div class="FooterDev">Privacy</div>
+        <footer class="Footer">
+            <div class="Footer__Links">
+                <a href="" class="Link_ForFooter">Terms and conditions</a><a href="" class="Link_ForFooter">Privacy</a>
             </div>
-            <div class="FooterDev" align="right">
+            <div class="Footer__Follow">
                 <span>Follow</span>
-                <img src="../images/fb.png" alt="Тут должна быть картинка!)"/>
-                <img src="../images/tw.png" alt="Тут должна быть картинка!)"/>
-                <img src="../images/inst.png" alt="Тут должна быть картинка!)"/>
+                <figure class="ImgsLink">
+                    <a href=""><img src="../images/fb.png" alt="Тут должна быть картинка!)" class="ImgsLink__ImgLink"/></a>
+                    <a href=""><img src="../images/tw.png" alt="Тут должна быть картинка!)" class="ImgsLink__ImgLink"/></a>
+                    <a href=""><img src="../images/inst.png" alt="Тут должна быть картинка!)" class="ImgsLink__ImgLink"/></a>
+                </figure>
             </div>
         </footer>
-        </div>
     </body>
 </html>
